# breeze

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  AUTHORS  CMakeLists.txt  ClassikConfig.cmake.in  ClassikstylesConfig.cmake.in  KlassyConfig.cmake.in  README.md  install.sh  kdev_execute.sh  uninstall.sh
kdecoration/: CMakeLists.txt  breeze.h  breeze.json  breezeapplicationmenu.cpp  breezeapplicationmenu.h  breezebutton.cpp  breezebutton.h  breezedecoration.cpp  breezedecoration.h  breezeexceptionlist.cpp  breezeexceptionlist.h  breezesettings.kcfgc  breezesettingsdata.kcfg  breezesettingsprovider.cpp  breezesettingsprovider.h  breezesizegrip.cpp  breezesizegrip.h  config-breeze.h.cmake
kdecoration/config/: CMakeLists.txt  addpreset.cpp  addpreset.h  breezeconfigwidget.cpp  breezeconfigwidget.h  breezedecorationconfig.desktop  breezedetectwidget.cpp  breezedetectwidget.h  breezeexceptiondialog.cpp  breezeexceptiondialog.h  breezeexceptionlistwidget.cpp  breezeexceptionlistwidget.h  breezeexceptionmodel.cpp  breezeexceptionmodel.h  breezeitemmodel.cpp  breezeitemmodel.h  breezelistmodel.h  buttonbehaviour.cpp  buttonbehaviour.h  buttoncolors.cpp  buttoncolors.h  buttonsizing.cpp  buttonsizing.h  classikdecorationconfig.desktop  classikstylesdecorationconfig.desktop  fullheightrectanglesizing.cpp  fullheightrectanglesizing.h  kcm_breezedecoration.cpp  kcm_breezedecoration.json  kcm_klassydecoration.json  klassydecorationconfig.desktop  loadpreset.cpp  loadpreset.h  presetsmodel.cpp  presetsmodel.h  shadowstyle.cpp  shadowstyle.h  systemicongeneration.cpp  systemicongeneration.h  systemicongenerator.cpp  (+9 more)
kdecoration/libdbusmenuqt/: CMakeLists.txt  dbusmenuimporter.cpp  dbusmenushortcut_p.cpp  dbusmenushortcut_p.h  dbusmenutypes_p.cpp  dbusmenutypes_p.h  utils.cpp  utils_p.h
kstyle/: CMakeLists.txt  breeze.h  breeze.json  breeze.kcfg  breeze.themerc  breezeaddeventfilter.cpp  breezeaddeventfilter.h  breezeblurhelper.cpp  breezeblurhelper.h  breezecss.cpp  breezecss.h  breezedecorationsettingsprovider.cpp  breezedecorationsettingsprovider.h  breezeframeshadow.cpp  breezeframeshadow.h  breezeheaderhelper.cpp  breezeheaderhelper.h  breezehelper.cpp  breezehelper.h  breezekeyholdmanager.cpp  breezekeyholdmanager.h  breezemdiwindowshadow.cpp  breezemdiwindowshadow.h  breezemetrics.cpp  breezemetrics.h  breezemnemonics.cpp  breezemnemonics.h  breezepropertynames.cpp  breezepropertynames.h  breezeshadowhelper.cpp  breezeshadowhelper.h  breezesplitterproxy.cpp  breezesplitterproxy.h  breezestyle.cpp  breezestyle.h  breezestyleplugin.cpp  breezestyleplugin.h  breezetileset.cpp  breezetileset.h  breezetoolsareamanager.cpp  (+8 more)
kstyle/animations/: breezeanimation.cpp  breezeanimation.h  breezeanimationdata.cpp  breezeanimationdata.h  breezeanimations.cpp  breezeanimations.h  breezebaseengine.cpp  breezebaseengine.h  breezebusyindicatordata.cpp  breezebusyindicatordata.h  breezebusyindicatorengine.cpp  breezebusyindicatorengine.h  breezecheckboxdata.cpp  breezecheckboxdata.h  breezecheckboxengine.cpp  breezecheckboxengine.h  breezedatamap.h  breezedialdata.cpp  breezedialdata.h  breezedialengine.cpp  breezedialengine.h  breezeenabledata.cpp  breezeenabledata.h  breezegenericdata.cpp  breezegenericdata.h  breezeheaderviewdata.cpp  breezeheaderviewdata.h  breezeheaderviewengine.cpp  breezeheaderviewengine.h  breezemultistatedata.cpp  breezemultistatedata.h  breezemultistateengine.cpp  breezemultistateengine.h  breezescrollbardata.cpp  breezescrollbardata.h  breezescrollbarengine.cpp  breezescrollbarengine.h  breezespinboxdata.cpp  breezespinboxdata.h  breezespinboxengine.cpp  (+19 more)
kstyle/config/: CMakeLists.txt  breezeconfigdialog.cpp  breezestyleconfig.cpp  breezestyleconfig.desktop  breezestyleconfig.h  breezestyleconfig.json  breezestyleconfigmodule.cpp  breezestyleconfigmodule.h  classikstyleconfig.desktop  classikstylesstyleconfig.desktop  klassy-settings.desktop  (+5 more)
kwin-decoration/: CMakeLists.txt  breeze.h  breezeanimation.h  breezebutton.cpp  breezebutton.h  breezeclient.cpp  breezeclient.desktop  breezeclient.h  breezeclientgroupitemdata.cpp  breezeclientgroupitemdata.h  breezeconfigdata.kcfg  breezeconfiguration.kcfgc  breezeexceptionlist.cpp  breezeexceptionlist.h  breezefactory.cpp  breezefactory.h  breezehelper.cpp  breezehelper.h  breezesizegrip.cpp  breezesizegrip.h  config-breeze.h.cmake
libbreezecommon/: CMakeLists.txt  breeze.cpp  breeze.h  breezeboxshadowhelper.cpp  breezeboxshadowrenderer.cpp  breezeboxshadowrenderer.h  breezerenderdecorationbuttonicon.cpp  breezerenderdecorationbuttonicon.h  breezesettingsdata.kcfg  breezestyleclassic.cpp  breezestyleclassic.h  breezestyleoxygen.cpp  breezestyleoxygen.h  breezestyleredmond.cpp  breezestyleredmond.h  colortools.cpp  colortools.h  dbuslistener.cpp  dbuslistener.h  dbusmessages.h  dbusupdatenotifier.cpp  dbusupdatenotifier.h  decorationbuttoncolors.cpp  decorationbuttoncolors.h  decorationbuttoncommon.cpp  decorationbuttoncommon.h  decorationcolors.cpp  decorationcolors.h  decorationexceptionlist.cpp  decorationexceptionlist.h  geometrytools.cpp  geometrytools.h  presetsmodel.cpp  presetsmodel.h  renderdecorationbuttonicon.cpp  renderdecorationbuttonicon.h  renderdecorationbuttonicon18by18.cpp  renderdecorationbuttonicon18by18.h  setqdebug_logging.h  styleclassik.cpp  (+21 more)
look-and-feel/: CMakeLists.txt
plymouth/: CMakeLists.txt
test/: CMakeLists.txt  breezebenchmarkwidget.cpp  breezebenchmarkwidget.h  breezebuttondemowidget.cpp  breezebuttondemowidget.h  breezedemodialog.cpp  breezedemodialog.h  breezedemowidget.cpp  breezedemowidget.h  breezeframedemowidget.cpp  breezeframedemowidget.h  breezeinputdemowidget.cpp  breezeinputdemowidget.h  breezelistdemowidget.cpp  breezelistdemowidget.h  breezemdidemowidget.cpp  breezemdidemowidget.h  breezeschemechooser.cpp  breezeschemechooser.h  breezesimulator.cpp  breezesimulator.h  breezesliderdemowidget.cpp  breezesliderdemowidget.h  breezestylechooser.cpp  breezestylechooser.h  breezetabdemowidget.cpp  breezetabdemowidget.h  breezetabwidget.cpp  breezetabwidget.h  main.cpp
(+620 files in other folders)
